<resources>
    <string name="app_name">Nursing Assesments</string>
    <string name="testselect">Select Test</string>
    <string name="ciwaartest">CIWA-Ar</string>
    <string name="cowstest">COWS</string>
    <string name="nortontest">Norton Scale</string>
    <string name="bradentest">Braden Scale</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="moresevere">(More severe symptoms) (%1$d)</string>
    <string name="ciwaarq1">Nausea/vomiting</string>
    <string name="ciwaarq1p2">Ask \'Do you feel sick to your stomach? Have you vomited?\'</string>
    <string name="ciwaarq1a0">No nausea and no vomiting (%1$d)</string>
    <string name="ciwaarq1a1">Mild nausea and no vomiting (%1$d)</string>
    <string name="ciwaarq1a4">Intermittent nausea with dry heaves (%1$d)</string>
    <string name="ciwaarq1a7">Constant nausea, frequent dry heaves and vomiting (%1$d)</string>
    <string name="ciwaarq2">Tremor</string>
    <string name="ciwaarq2p2">Arms extended and fingers spread apart</string>
    <string name="ciwaarq2a0">No tremor (%1$d)</string>
    <string name="ciwaarq2a1">Not visible, but can be felt fingertip to fingertip (%1$d)</string>
    <string name="ciwaarq2a4">Moderate, with patient\'s arms extended (%1$d)</string>
    <string name="ciwaarq2a7">Severe, even with arms not extended (%1$d)</string>
    <string name="ciwaarq3">Paroxysmal sweats</string>
    <string name="ciwaarq3a0">No sweat visible (%1$d)</string>
    <string name="ciwaarq3a1">Barely perceptible sweating, palms moist (%1$d)</string>
    <string name="ciwaarq3a4">Beads of sweat obvious on forehead (%1$d)</string>
    <string name="ciwaarq3a7">Drenching sweats (%1$d)</string>
    <string name="ciwaarq4">Anxiety</string>
    <string name="ciwaarq4p2">Ask, \'Do you feel nervous?\'</string>
    <string name="ciwaarq4a0">No anxiety, at ease (%1$d)</string>
    <string name="ciwaarq4a1">Mildly anxious (%1$d)</string>
    <string name="ciwaarq4a4">Moderately anxious, or guarded, so anxiety is inferred (%1$d)</string>
    <string name="ciwaarq4a7">Equivalent to acute panic states as seen in severe delirium or acute schizophrenic reactions (%1$d)</string>
    <string name="ciwaarq5">Agitation</string>
    <string name="ciwaarq5a0">Normal activity (%1$d)</string>
    <string name="ciwaarq5a1">Somewhat more activity than normal activity (%1$d)</string>
    <string name="ciwaarq5a4">Moderately fidgety and restless (%1$d)</string>
    <string name="ciwaarq5a7">Paces back and forth during most of the interview, or constantly thrashes about (%1$d)</string>
    <string name="ciwaarq6">Tactile disturbances</string>
    <string name="ciwaarq6p2">Ask, \'Have you any itching, pins and needles sensations, any burning, any numbness, or do you feel bugs crawling on or under your skin?\'</string>
    <string name="ciwaarq6a0">No tactile disturbances (%1$d)</string>
    <string name="ciwaarq6a1">Very Mild itching, pin and needles, burning, or numbness (%1$d)</string>
    <string name="ciwaarq6a2">Mild itching, pin and needles, burning, or numbness (%1$d)</string>
    <string name="ciwaarq6a3">Moderate itching, pin and needles, burning, or numbness (%1$d)</string>
    <string name="ciwaarq6a4">Moderately severe tactile hallucinations (%1$d)</string>
    <string name="ciwaarq6a5">Severe tactile hallucinations (%1$d)</string>
    <string name="ciwaarq6a6">Extremely severe tactile hallucinations (%1$d)</string>
    <string name="ciwaarq6a7">Continuous tactile hallucinations (%1$d)</string>
    <string name="ciwaarq7">Auditory disturbances</string>
    <string name="ciwaarq7p2">Ask, \'Are you more aware of sounds around you? Are they harsh? Do they frighten you? Are you hearing anything that is disturbing to you? Are you hearing things you know are not there?\'</string>
    <string name="ciwaarq7a0">No auditory disturbances (%1$d)</string>
    <string name="ciwaarq7a1">Very mild harshness or ability to frighten (%1$d)</string>
    <string name="ciwaarq7a2">Mild harshness or ability to frighten (%1$d)</string>
    <string name="ciwaarq7a3">Moderate harshness or ability to frighten (%1$d)</string>
    <string name="ciwaarq7a4">Moderately severe auditory hallucinations (%1$d)</string>
    <string name="ciwaarq7a5">Severe auditory hallucinations (%1$d)</string>
    <string name="ciwaarq7a6">Extremely severe auditory hallucinations (%1$d)</string>
    <string name="ciwaarq7a7">Continuous auditory hallucinations (%1$d)</string>
    <string name="ciwaarq8">Visual disturbances</string>
    <string name="ciwaarq8p2">Ask \'Does the light appear to be too bright? Is its color different? Does it hurt your eyes? Are you seeing things you know are not there?\' </string>
    <string name="ciwaarq8a0">No visual disturbances (%1$d)</string>
    <string name="ciwaarq8a1">Very mild visual sensitivity (%1$d)</string>
    <string name="ciwaarq8a2">Mild visual sensitivity (%1$d)</string>
    <string name="ciwaarq8a3">Moderate visual sensitivity (%1$d)</string>
    <string name="ciwaarq8a4">Moderately severe visual hallucinations (%1$d)</string>
    <string name="ciwaarq8a5">Severe visual hallucinations (%1$d)</string>
    <string name="ciwaarq8a6">Extremely severe visual hallucinations (%1$d)</string>
    <string name="ciwaarq8a7">Continuous visual hallucinations (%1$d)</string>
    <string name="ciwaarq9">Headache</string>
    <string name="ciwaarq9p2">Ask \'Does your head feel different? Does it feel like there is a band around your head?\' Do not rate for dizziness or lightheadedness. Otherwise, rate \'severity.\'</string>
    <string name="ciwaarq9a0">No headache (%1$d)</string>
    <string name="ciwaarq9a1">Very mild headache (%1$d)</string>
    <string name="ciwaarq9a2">Mild headache (%1$d)</string>
    <string name="ciwaarq9a3">Moderate headache (%1$d)</string>
    <string name="ciwaarq9a4">Moderately severe headache (%1$d)</string>
    <string name="ciwaarq9a5">Severe headache (%1$d)</string>
    <string name="ciwaarq9a6">Very severe headache (%1$d)</string>
    <string name="ciwaarq9a7">Extremely severe headache (%1$d)</string>
    <string name="ciwaarq10">Orientation</string>
    <string name="ciwaarq10p2">Ask \'What day is this? Where are you? Who am I?\'</string>
    <string name="ciwaarq10a0">Oriented, can do serial additions (%1$d)</string>
    <string name="ciwaarq10a1">Can\'t do serial additions or is uncertain about date (%1$d)</string>
    <string name="ciwaarq10a2">Disoriented for date by no more than 2 calendar days (%1$d)</string>
    <string name="ciwaarq10a3">Disoriented for date by more than 2 calendar days (%1$d)</string>
    <string name="ciwaarq10a4">Disoriented to place or person (%1$d)</string>
    <string name="totalpoints">%1$d Points</string>
    <string name="ciwaar1">Very mild withdrawal</string>
    <string name="ciwaar2">Mild withdrawal</string>
    <string name="ciwaar3">Modest withdrawal</string>
    <string name="ciwaar4">Severe withdrawal</string>
    <string name="testagain">Repeat this assessment.</string>
    <string name="diftest">Perform a different assessment.</string>
    <string name="cowsq1">Resting Pulse Rate (BPM)</string>
    <string name="cowsq1p2">Measure pulse rate after patient is sitting or lying down for 1 minute</string>
    <string name="cowsq1a0">≤80 (%1$d)</string>
    <string name="cowsq1a1">81-100 (%1$d)</string>
    <string name="cowsq1a2">101-120 (%1$d)</string>
    <string name="cowsq1a3">120 (%1$d)</string>
    <string name="cowsq2">Sweating</string>
    <string name="cowsq2p2">Sweating not accounted for by room temperature or patient activity over the last 0.5 hours</string>
    <string name="cowsq2a0">No report of chills or flushing (%1$d)</string>
    <string name="cowsq2a1">Subjective report of chills or flushing (%1$d)</string>
    <string name="cowsq2a2">Flushed or observable moistness on face (%1$d)</string>
    <string name="cowsq2a3">Beads of sweat on brow or face (%1$d)</string>
    <string name="cowsq2a4">Sweat streaming off face (%1$d)</string>
    <string name="cowsq3">Restlessness</string>
    <string name="cowsq3a0">Able to sit still (%1$d)</string>
    <string name="cowsq3a1">Reports difficulty sitting still, but is able to do so (%1$d)</string>
    <string name="cowsq3a2">Frequent shifting or extraneous movements of legs/arms (%1$d)</string>
    <string name="cowsq3a3">Unable to sit still for more than a few seconds (%1$d)</string>
    <string name="cowsq4">Pupil size</string>
    <string name="cowsq4a0">Pupils pinned or normal size for room light (%1$d)</string>
    <string name="cowsq4a1">Pupils possibly larger than normal for room light (%1$d)</string>
    <string name="cowsq4a2">Pupils moderately dilated (%1$d)</string>
    <string name="cowsq4a3">Pupils so dilated that only the rim of the iris is visible (%1$d)</string>
    <string name="cowsq5">Bone or joint aches</string>
    <string name="cowsq5p2">If patient was having pain previously, only the additional component attributed to opiate withdrawal is scored</string>
    <string name="cowsq5a0">Not present (%1$d)</string>
    <string name="cowsq5a1">Mild diffuse discomfort (%1$d)</string>
    <string name="cowsq5a2">Patient reports severe diffuse aching of joints/muscles (%1$d)</string>
    <string name="cowsq5a3">Patient is rubbing joints or muscles and is unable to sit still because of discomfort (%1$d)</string>
    <string name="cowsq6">Runny nose or tearing</string>
    <string name="cowsq6p2">Not accounted for by cold symptoms or allergies</string>
    <string name="cowsq6a0">Not present (%1$d)</string>
    <string name="cowsq6a1">Nasal stuffiness or unusually moist eyes (%1$d)</string>
    <string name="cowsq6a2">Nose running or tearing (%1$d)</string>
    <string name="cowsq6a3">Nose constantly running or tears streaming down cheeks (%1$d)</string>
    <string name="cowsq7">GI Upset</string>
    <string name="cowsq7p2">Over last 0.5 hours</string>
    <string name="cowsq7a0">No GI symptoms (%1$d)</string>
    <string name="cowsq7a1">Stomach Cramps (%1$d)</string>
    <string name="cowsq7a2">Nausea or loose stool (%1$d)</string>
    <string name="cowsq7a3">Vomiting or diarrhea (%1$d)</string>
    <string name="cowsq7a4">Multiple episodes of vomiting or diarrhea (%1$d)</string>
    <string name="cowsq8">Tremor observation of outstretched hands</string>
    <string name="cowsq8a0">No tremor (%1$d)</string>
    <string name="cowsq8a1">Tremor can be felt, but not observed (%1$d)</string>
    <string name="cowsq8a2">Slight tremor observable (%1$d)</string>
    <string name="cowsq8a3">Gross tremor or muscle twitching (%1$d)</string>
    <string name="cowsq9">Yawning observation during assessment</string>
    <string name="cowsq9a0">No yawning (%1$d)</string>
    <string name="cowsq9a1">Yawning once or twice during assessment (%1$d)</string>
    <string name="cowsq9a2">Yawining three or more times during assment (%1$d)</string>
    <string name="cowsq9a3">Yawning several times/minute (%1$d)</string>
    <string name="cowsq10">Anxiety or irritability</string>
    <string name="cowsq10a0">None (%1$d)</string>
    <string name="cowsq10a1">Patient reports increasing irritability or anxiousness (%1$d)</string>
    <string name="cowsq10a2">Patient obviously irritable/anxious (%1$d)</string>
    <string name="cowsq10a3">Patient so irritable or anxious that participation in the assessment is difficult (%1$d)</string>
    <string name="cowsq11">Gooseflesh skin</string>
    <string name="cowsq11a0">Skin is smooth (%1$d)</string>
    <string name="cowsq11a1">Piloerection of skin can be felt or hairs standing up on arms (%1$d)</string>
    <string name="cowsq11a2">Prominent piloerection (%1$d)</string>
    <string name="cows1">Very mild withdrawal</string>
    <string name="cows2">Mild withdrawal</string>
    <string name="cows3">Moderate withdrawal</string>
    <string name="cows4">Moderately severe withdrawal</string>
</resources>